<resources>
    <string name="app_name">AmountKeyboard</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="aed_0_00">AED 0.00</string>
    <string name="aed_label">AED&#160;</string>
</resources>